[tool.poetry]
name = "encode-api"
version = "0.1.0"
description = ""
authors = ["malcolm <mgperry32@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
pandas = "^1.3.3"
ipykernel = "^6.4.1"
wget = "^3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
